--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,14 +1,22 @@
 <!Doctype html>
-<html>
+<html ng-app="sightApp">
 <head>
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+
+	<div class="globalContainer" ng-view></div>
+	<info-bar></info-bar>
+	<search-bar></search-bar>
+
+
 	<script src="js/lib/d3.v3.min.js"></script>
 	<script src="js/lib/underscore-min.js"></script>
 	<script src="js/lib/angular.min.js"></script>
 	<script src="js/lib/angular-route.min.js"></script>
 	<script src="js/lib/jquery-2.1.3.min.js"></script>
 	<script src="js/app.js"></script>
+	<script src="js/components/search-bar/searchBarDirective.js"></script>
+	<script src="js/components/info-bar/infoBarDirective.js"></script> 
 </body>
 </html>
