--- a/front-end/index.html
+++ b/front-end/index.html
@@ -15,8 +15,12 @@
 	<script src="js/lib/angular.min.js"></script>
 	<script src="js/lib/angular-route.min.js"></script>
 	<script src="js/lib/jquery-2.1.3.min.js"></script>
+	<script src="js/lib/colResizable-1.5.min.js"></script>
 	<script src="js/app.js"></script>
 	<script src="js/components/search-bar/searchBarDirective.js"></script>
 	<script src="js/components/info-bar/infoBarDirective.js"></script> 
+	<script src="js/components/table-view/tableViewController.js"></script> 
+	<script type="text/javascript">
+	</script>
 </body>
 </html>
