--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,6 +1,16 @@
 <!Doctype html>
 <html ng-app="sightApp">
-<head>
+<head>	
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-touch.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-animate.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js"></script>    
+    <script src="js/lib/ui-grid/grunt-scripts/csv.js"></script>
+    <script src="js/lib/ui-grid/grunt-scripts/pdfmake.js"></script>
+    <script src="js/lib/ui-grid/grunt-scripts/vfs_fonts.js"></script>
+    <script src="js/lib/ui-grid/ui-grid-unstable.js"></script>
+    <link rel="stylesheet" href="js/lib/ui-grid/ui-grid-unstable.css" type="text/css">
+
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
@@ -12,15 +22,23 @@
 
 	<script src="js/lib/d3.v3.min.js"></script>
 	<script src="js/lib/underscore-min.js"></script>
-	<script src="js/lib/angular.min.js"></script>
-	<script src="js/lib/angular-route.min.js"></script>
+	
+
+
+
+
+	
 	<script src="js/lib/jquery-2.1.3.min.js"></script>
-	<script src="js/lib/colResizable-1.5.min.js"></script>
+	
 	<script src="js/app.js"></script>
 	<script src="js/components/search-bar/searchBarDirective.js"></script>
 	<script src="js/components/info-bar/infoBarDirective.js"></script> 
 	<script src="js/components/table-view/tableViewController.js"></script> 
 	<script type="text/javascript">
 	</script>
+
+	<!--<script src="js/lib/colResizable-1.5.min.js"></script>
+
+	-->
 </body>
 </html>
