--- a/front-end/index.html
+++ b/front-end/index.html
@@ -16,23 +16,18 @@
 <body>
 
 	<div class="globalContainer" ng-view></div>
-	<info-bar></info-bar>
+	<div info-bar></div>
 	<search-bar></search-bar>
 
 
 	<script src="js/lib/d3.v3.min.js"></script>
 	<script src="js/lib/underscore-min.js"></script>
-	
-
-
-
-
-	
 	<script src="js/lib/jquery-2.1.3.min.js"></script>
 	
 	<script src="js/app.js"></script>
 	<script src="js/components/search-bar/searchBarDirective.js"></script>
 	<script src="js/components/info-bar/infoBarDirective.js"></script> 
+	<script src="js/components/info-bar/infoBarController.js"></script> 
 	<script src="js/components/table-view/tableViewController.js"></script> 
 	<script type="text/javascript">
 	</script>
