Add controller for conditions

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -30,6 +30,7 @@
 	
 	<script src="js/app.js"></script>
 	<script src="js/components/search-bar/searchBarDirective.js"></script>
+	<script src="js/components/search-bar/searchBarController.js"></script>
 	<script src="js/components/info-bar/infoBarDirective.js"></script> 
 	<script src="js/components/info-bar/infoBarController.js"></script>
 	<script src="js/components/header-bar/headerBarDirective.js"></script>  
