--- a/front-end/index.html
+++ b/front-end/index.html
@@ -13,7 +13,7 @@
 
 	<link rel="stylesheet" href="css/index.css">
 </head>
-<body>
+<body ng-controller="GlobalController as globalCtrl">
 	
 	<div class="view-container" ng-view></div>
 	<!-- <div info-bar></div> -->
@@ -29,11 +29,13 @@
 	<script src="js/lib/jquery-2.1.3.min.js"></script>
 	
 	<script src="js/app.js"></script>
+	<script src="js/components/globalController.js"></script>
 	<script src="js/components/search-bar/searchBarDirective.js"></script>
 	<script src="js/components/search-bar/searchBarController.js"></script>
 	<script src="js/components/info-bar/infoBarDirective.js"></script> 
 	<script src="js/components/info-bar/infoBarController.js"></script>
 	<script src="js/components/header-bar/headerBarDirective.js"></script>  
+	<script src="js/components/header-bar/headerController.js"></script>  
 	<script src="js/components/table-view/tableViewController.js"></script> 
 	<script type="text/javascript">
 	</script>
