--- a/front-end/index.html
+++ b/front-end/index.html
@@ -37,6 +37,7 @@
 	<script src="js/components/header-bar/headerBarDirective.js"></script>  
 	<script src="js/components/header-bar/headerController.js"></script>  
 	<script src="js/components/table-view/tableViewController.js"></script> 
+	<script src="js/components/tag-container/tagContainerDirective.js"></script> 
 	<script type="text/javascript">
 	</script>
 
