Put angular lib as local file

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,10 +1,10 @@
 <!Doctype html>
 <html ng-app="sightApp">
 <head>	
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-touch.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-animate.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular-route.js"></script>    
+	<script src="js/lib/angular.js"></script>
+    <script src="js/lib/angular-touch.js"></script>
+    <script src="js/lib/angular-animate.js"></script>
+    <script src="js/lib/angular-route.js"></script>    
     <script src="js/lib/ui-grid/grunt-scripts/csv.js"></script>
     <script src="js/lib/ui-grid/grunt-scripts/pdfmake.js"></script>
     <script src="js/lib/ui-grid/grunt-scripts/vfs_fonts.js"></script>
@@ -38,6 +38,8 @@
 	<script src="js/components/header-bar/headerController.js"></script>  
 	<script src="js/components/table-view/tableViewController.js"></script> 
 	<script src="js/components/tag-container/tagContainerDirective.js"></script> 
+	<script src="js/components/graph/graphController.js"></script> 
+	<script src="js/components/graph/graphDirective.js"></script> 
 	<script type="text/javascript">
 	</script>
 
