Add fomatter for tag model

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -19,8 +19,8 @@
 	<!-- <div info-bar></div> -->
 	<info-bar></info-bar>
 	<search-bar></search-bar>
-	
 	<header-bar></header-bar>
+	
 
 
 
@@ -34,6 +34,7 @@
 	<script src="js/components/search-bar/searchBarController.js"></script>
 	<script src="js/components/info-bar/infoBarDirective.js"></script> 
 	<script src="js/components/info-bar/infoBarController.js"></script>
+	<script src="js/components/info-bar/tagInputFormatterDirective.js"></script>
 	<script src="js/components/header-bar/headerBarDirective.js"></script>  
 	<script src="js/components/header-bar/headerController.js"></script>  
 	<script src="js/components/table-view/tableViewController.js"></script> 
