Improve Editing to support author obj. Refine UI-grid to use filter for author obj.

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -35,9 +35,11 @@
 	<script src="js/components/info-bar/infoBarDirective.js"></script> 
 	<script src="js/components/info-bar/infoBarController.js"></script>
 	<script src="js/components/info-bar/tagInputFormatterDirective.js"></script>
+	<script src="js/components/info-bar/authorInputFormatterDirective.js"></script>
 	<script src="js/components/header-bar/headerBarDirective.js"></script>  
 	<script src="js/components/header-bar/headerController.js"></script>  
 	<script src="js/components/table-view/tableViewController.js"></script> 
+	<script src="js/components/table-view/authorCellFilter.js"></script> 
 	<script src="js/components/tag-container/tagContainerDirective.js"></script> 
 	<script src="js/components/graph/graphController.js"></script> 
 	<script src="js/components/graph/graphDirective.js"></script> 
